# ha-mcp

privacy-addon/: pyproject.toml
privacy-addon/src/ha_mcp_sanitize/: __init__.py  _patch.py  _tools.py  entry.py  sanitizer.py
src/ha_mcp/: config.py  sanitizer.py
src/ha_mcp/tools/: helpers.py  tools_privacy.py
